--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "cd app && ng test",
-    "start": "cd app && ng serve --host 0.0.0.0 --disable-host-check --hmr",
+    "start": "cd app && npm run dev",
     "cy:run": "cypress run",
     "cy:open": "cypress open"
   },
@@ -25,6 +25,7 @@
     "cypress": "^9.2.0"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@supabase/supabase-js": "^2.10.0"
   }
 }
