--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "cd app && ng test",
-    "start": "cd app && npm run dev",
+    "serve": "cd app && npm i && npm run dev",
+    "start": "cd app && npm i && npm run dev",
     "cy:run": "cypress run",
     "cy:open": "cypress open"
   },
