--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "cd app && npm test",
     "serve": "cd app && npm i && npm run dev",
     "start": "cd app && npm i && npm run dev",
-    "cy:run": "cypress run",
-    "cy:open": "cypress open"
+    "cy:run": "npm i && cypress run",
+    "cy:open": "npm i && cypress open"
   },
   "repository": {
     "type": "git",
